[gd_scene load_steps=11 format=3 uid="uid://mcopfriks2m1"]

[ext_resource type="Script" path="res://Sceens/Scripts/TriggerArea.gd" id="1_8o5x0"]
[ext_resource type="PhysicsMaterial" uid="uid://dmc8ljxbv0rj5" path="res://Bouncy.tres" id="1_pcpdf"]
[ext_resource type="Texture2D" uid="uid://5furdtf5mpuk" path="res://Resources/TriggerArea.png" id="1_usx6j"]
[ext_resource type="PackedScene" uid="uid://sxkwwccipj3r" path="res://Sceens/marble.tscn" id="3_e5pjm"]
[ext_resource type="PackedScene" uid="uid://i0wghycyq0rp" path="res://Sceens/Obstacle.tscn" id="5_cduht"]

[sub_resource type="LabelSettings" id="LabelSettings_5w7wg"]
font_size = 50

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w1lmx"]
size = Vector2(480, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ebucx"]
size = Vector2(20, 540)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ggav3"]
size = Vector2(20, 80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_18ddu"]
size = Vector2(210, 70)

[node name="TriggerArea" type="StaticBody2D"]
modulate = Color(0.568627, 0.568627, 0.568627, 1)
self_modulate = Color(0.568627, 0.568627, 0.568627, 1)
collision_layer = 128
collision_mask = 64
physics_material_override = ExtResource("1_pcpdf")
script = ExtResource("1_8o5x0")
MarbleScene = ExtResource("3_e5pjm")

[node name="Count" type="Label" parent="."]
z_index = 1
offset_left = 28.0
offset_top = 182.0
offset_right = 457.0
offset_bottom = 381.0
text = "1"
label_settings = SubResource("LabelSettings_5w7wg")
horizontal_alignment = 1

[node name="Frame" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("1_usx6j")

[node name="Top" type="CollisionShape2D" parent="."]
modulate = Color(0.568627, 0.568627, 0.568627, 1)
self_modulate = Color(0.568627, 0.568627, 0.568627, 1)
position = Vector2(240, 10)
shape = SubResource("RectangleShape2D_w1lmx")

[node name="Bottom" type="CollisionShape2D" parent="."]
modulate = Color(0.568627, 0.568627, 0.568627, 1)
position = Vector2(240, 530)
shape = SubResource("RectangleShape2D_w1lmx")

[node name="Left" type="CollisionShape2D" parent="."]
modulate = Color(0.568627, 0.568627, 0.568627, 1)
position = Vector2(10, 270)
shape = SubResource("RectangleShape2D_ebucx")

[node name="Right" type="CollisionShape2D" parent="."]
modulate = Color(0.568627, 0.568627, 0.568627, 1)
position = Vector2(470, 270)
shape = SubResource("RectangleShape2D_ebucx")

[node name="Middle" type="CollisionShape2D" parent="."]
position = Vector2(240, 480)
shape = SubResource("RectangleShape2D_ggav3")

[node name="Obstacle1" parent="." instance=ExtResource("5_cduht")]
position = Vector2(64, 201)

[node name="Obstacle2" parent="." instance=ExtResource("5_cduht")]
position = Vector2(282, 208)

[node name="Obstacle3" parent="." instance=ExtResource("5_cduht")]
position = Vector2(142, 328)

[node name="Obstacle4" parent="." instance=ExtResource("5_cduht")]
position = Vector2(381, 159)

[node name="Obstacle5" parent="." instance=ExtResource("5_cduht")]
position = Vector2(405, 277)

[node name="Obstacle6" parent="." instance=ExtResource("5_cduht")]
position = Vector2(241, 339)

[node name="Obstacle7" parent="." instance=ExtResource("5_cduht")]
position = Vector2(169, 132)

[node name="Obstacle8" parent="." instance=ExtResource("5_cduht")]
position = Vector2(347, 373)

[node name="MultiTrigger" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 64
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="MultiTrigger"]
position = Vector2(125, 485)
shape = SubResource("RectangleShape2D_18ddu")

[node name="ReleaTrigger" type="Area2D" parent="."]
position = Vector2(230, 0)
collision_layer = 128
collision_mask = 64
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="ReleaTrigger"]
position = Vector2(125, 485)
shape = SubResource("RectangleShape2D_18ddu")

[node name="SpawnPoint" type="Node2D" parent="."]
position = Vector2(250, 86)

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 20.0

[connection signal="body_entered" from="MultiTrigger" to="." method="_on_multi_trigger_body_entered"]
[connection signal="body_entered" from="ReleaTrigger" to="." method="_on_relea_trigger_body_entered"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
